Fixed bug where slideshow navigation arrows would be incorrectly positioned on smaller browser sizes.

--- a/src/styles/project_detail.css
+++ b/src/styles/project_detail.css
@@ -89,6 +89,10 @@
         padding-bottom: 90%;
     }
 
+    .slider-container .slider .arrow {
+        top: 35%;
+    }
+
     .slider-container .pager {
         display: none;
     }
